// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcNavigation > should be collapsable when isCollapsable is set 1`] = `
<div
  class="ec-navigation ec-navigation--is-collapsable"
  data-test="ec-navigation"
>
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should be collapsed when isCollapsed is set to true 1`] = `
<div
  class="ec-navigation ec-navigation--is-collapsed"
  data-test="ec-navigation"
>
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should be expanded when isCollapsed is set to false 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should not render branding if logo is given in branding object but showBrandingLogo is set to false 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should not render branding if no logo is given in branding object 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should only render mandatory slot if no other slots were given 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should render all given slots 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <div
    class="ec-navigation__block ec-navigation__user-info"
    data-test="ec-navigation__block ec-navigation__user-info"
  >
    
    <div>
      User Info
    </div>
    
  </div>
  <div
    class="ec-navigation__block ec-navigation__call-to-action"
    data-test="ec-navigation__block ec-navigation__call-to-action"
  >
    
    <div>
      CTA
    </div>
    
  </div>
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    <div>
      Menu
    </div>
    
  </div>
  <div
    class="ec-navigation__block ec-navigation__footer-menu"
    data-test="ec-navigation__block ec-navigation__footer-menu"
  >
    
    <div>
      Footer Menu
    </div>
    
  </div>
  <div
    class="ec-navigation__block ec-navigation__copyright"
    data-test="ec-navigation__block ec-navigation__copyright"
  >
    
    <div>
      Copyright
    </div>
    
  </div>
</div>
`;

exports[`EcNavigation > should render branding logo and name when given > Branding should have alt and src. 1`] = `
<div
  class="ec-navigation__branding"
  data-test="ec-navigation__branding"
>
  <img
    alt="My Branding"
    class="ec-navigation__branding-logo"
    data-test="ec-navigation__branding-logo"
    src="/img/my.png"
  />
</div>
`;

exports[`EcNavigation > should render branding logo and name when given 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="My Branding"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should render with custom attributes 1`] = `
<div
  class="ec-navigation my-class"
  data-test="my-data-test ec-navigation"
  id="test-id"
>
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;
